# inclusive_city

./: .env.example  .gitignore  README.md  docker-compose.yaml  main.py
mongodb/: docker-compose.yaml
route_management/: Dockerfile  docker-compose.yaml
route_management/src/: constants.py  google_api.py  helpers.py  main.py  pyproject.toml  structures.py
web-api/: Dockerfile  README.md  docker-compose.yaml  requirements.txt  start.sh
web-api/app/: di.py  main.py  requirements.txt
web-api/app/api/v1/: facility_router.py  place_router.py  review_router.py  user_router.py
web-api/app/domain/: author.py  disabilityTypes.py  facility.py  location.py  place.py  placeType.py  review.py  role.py  user.py
web-api/app/infrastructure/: mongoFacilityRepository.py  mongoPlaceRepository.py
web-api/app/ml/: ml.py
web-api/app/schemas/: addReview.py  createPlace.py  placeSchemas.py  reviewSchemas.py
web-api/app/scripts/: README.md  enriched_places_with_place_id.json  parse_facilities.py  sample_facilities.json  seed_database.py  seed_facilities.py
web-ui/: .dockerignore  Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.yaml
web-ui/app/: .env.example  .gitignore  index.html  package-lock.json  package.json
web-ui/app/src/: App.css  App.jsx  main.jsx
web-ui/app/src/api/: direction-api.js  places-api.js
web-ui/app/src/components/GoogleMap/Polyline/: index.jsx
web-ui/app/src/components/SideMenu/: index.jsx
web-ui/app/src/config/: index.js
web-ui/app/src/services/: polyline-service.js
web-ui/docker/: nginx.conf
(+4 files in other folders)
