[project]
name = "inclusive-city"
version = "0.1.0"
description = "Inclusive City is the application for inclusive people <3."
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.11"
package-mode = false


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.2"
pydantic = "^2.9.2"
typing-extensions = ">=4.12.2"
uvicorn = ">=0.26.0,<0.27.0"